apps/development/sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-deployment
  namespace: development
  labels:
    app: sonarqube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:8.9.1-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: sonarqube-volume
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: sonarqube-volume
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "2048Mi"
      volumes:
      - name: sonarqube-volume
        persistentVolumeClaim:
          claimName: sonarqube-persistent-volume-claim
