apps/development/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: development
  labels:
    app: sonarqube
spec:
  ports:
  - port: 9000
    name: sonarqube
  selector:
    app: sonarqube
