apps/development/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 1
  name: sonarqube-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: sonarqube-service
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarqube.kub3.dev
    secretName: le-sonarqube-kub3-dev-cert-tls
